# api2cli

./: .gitignore  README.md  pyproject.toml
src/api2cli/: errors.py
src/api2cli/cli/: auth.py  command_router.py  introspection.py  main.py  run.py  spec_loader.py
src/api2cli/core/analyzer/: __init__.py  analyzer.py  crud_detector.py  naming_engine.py  resource_detector.py
src/api2cli/core/generator/: __init__.py  flag_generator.py  generator.py  help_generator.py  tree_builder.py
src/api2cli/core/parsers/: __init__.py  detect.py  openapi_parser.py  spec_input.py
src/api2cli/core/runtime/: __init__.py  http_executor.py  request_builder.py  response_transformer.py
src/api2cli/models/: __init__.py  analyzed.py  commands.py  config.py  runtime.py  spec.py
src/api2cli/plugins/auth/: __init__.py  api_key.py  base.py  basic_auth.py  bearer.py  credential_store.py  resolver.py
src/api2cli/plugins/output/: __init__.py  json_formatter.py  table_formatter.py
tests/: conftest.py
tests/factories/: spec_factory.py
tests/fixtures/openapi/: complex_params.yaml  invalid_spec.yaml  minimal.json  petstore.yaml
tests/integration/: test_auth.py  test_cli_basic.py  test_execution.py
tests/unit/cli/: test_command_router.py
tests/unit/core/analyzer/: test_analyzer.py
tests/unit/core/generator/: test_generator.py
tests/unit/core/parsers/: test_detect.py  test_openapi_parser.py  test_spec_input.py
tests/unit/core/runtime/: test_request_builder.py
tests/unit/models/: test_models.py
tests/unit/plugins/auth/: test_api_key.py  test_basic_auth.py  test_bearer.py  (+2 more)
