[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "api2cli"
version = "0.1.0"
description = "Convert API specifications into AI-optimized CLI tools"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "typer>=0.12.0",
    "httpx>=0.27.0",
    "pydantic>=2.7.0",
    "pyyaml>=6.0",
    "rich>=13.7.0",
    "structlog>=24.1.0",
    "openapi-spec-validator>=0.7.0",
    "jsonref>=1.1.0",
    "platformdirs>=4.2.0",
    "jinja2>=3.1.0",
    "mcp>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "respx>=0.21.0",
    "syrupy>=4.6.0",
    "mypy>=1.10.0",
    "types-pyyaml>=6.0.0",
    "pytest-timeout>=2.3.0",
    "ruff>=0.4.0",
]

[project.scripts]
api2cli = "api2cli.cli.main:app"

[tool.hatch.build.targets.wheel]
packages = ["src/api2cli"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[tool.ruff]
src = ["src"]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = ["yaml.*", "openapi_spec_validator.*", "jsonref.*"]
ignore_missing_imports = true
